# ox

./: .gitignore  AGENTS.md  Makefile  Ox.slnx  Ur.slnx  inspection-results.txt  providers.json  task.md
.claude/: settings.json
.k/plans/: 03-30-26-15-32-25-kitty-keyboard-events.md  03-31-26-09-45-00-wire-tui-to-ur.md  03-31-26-10-08-27-extension-system-phase-1.md  03-31-26-19-21-36-terminal-layout-system.md  03-31-26-20-15-00-chat-input-borders-status-bar.md  03-31-26-20-15-00-model-picker-columns.md
.ox/screen-dumps/: latest.txt  screen-20260410-100754-056.txt  screen-20260410-100826-685.txt  screen-20260410-122549-703.txt  screen-20260410-152643-947.txt  screen-20260410-163617-691.txt  screen-20260410-184901-566.txt  screen-20260411-025340-929.txt
.ox/screenshots/: latest.txt  screen-20260410-203323-713.txt  screen-20260410-203324-959.txt  screen-20260410-203326-289.txt  screen-20260410-203326-460.txt  screen-20260410-203346-636.txt  screen-20260410-203346-792.txt  screen-20260410-203347-913.txt  screen-20260410-203352-034.txt  screen-20260410-203352-957.txt  screen-20260410-203353-601.txt  screen-20260410-203353-642.txt
.ur/sessions/: 20260413-012337-590.jsonl  20260413-012337-590.metrics.json  20260413-012819-427.jsonl  20260413-012819-427.metrics.json  20260413-013457-009.jsonl  20260413-013457-009.metrics.json  20260413-033106-125.jsonl  20260413-033106-125.metrics.json  20260413-033234-000.jsonl  20260413-033234-000.metrics.json  20260413-033401-617.jsonl  20260413-033401-617.metrics.json  20260413-034641-460.jsonl  20260413-034641-460.metrics.json
Ur/: ChatBlockingIssue.cs  ChatNotReadyException.cs  ChatReadiness.cs  ConfigurationScope.cs  ExtensionCatalog.cs  ExtensionInfo.cs  SessionInfo.cs  TurnCallbacks.cs  Ur.csproj  UrChatBlockingIssue.cs  UrChatNotReadyException.cs  UrChatReadiness.cs  UrConfiguration.cs  UrExtensionCatalog.cs  UrExtensionInfo.cs  UrHost.cs  UrSession.cs  UrSessionInfo.cs  UrTurnCallbacks.cs  Workspace.cs
Ur.Cli/: OpenAIChatClientFactory.cs  Program.cs  Ur.Cli.csproj
Ur.Cli/Commands/: ChatCommand.cs  SessionCommands.cs  StatusCommand.cs
Ur.Console/: ConsoleDriver.cs  IDriver.cs  InputEvent.cs  Key.cs  Ur.Console.csproj
Ur.Demo/: ChatMessage.cs  ChatMessageWidgets.cs  Program.cs  Ur.Demo.csproj
Ur.Drawing/: BorderSet.cs  Canvas.cs  Cell.cs  Geometry.cs  ICanvas.cs  Screen.cs  Style.cs
Ur.Gui/: App.axaml  App.axaml.cs  Program.cs  Ur.Gui.csproj
Ur.Gui/ViewModels/: ApiKeyDialogViewModel.cs  ExtensionsDialogViewModel.cs  MainWindowViewModel.cs  MessageViewModel.cs  ModelPickerDialogViewModel.cs  SessionViewModel.cs
Ur.Gui/Views/: ApiKeyDialog.axaml  ApiKeyDialog.axaml.cs  ExtensionsDialog.axaml  ExtensionsDialog.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ModelPickerDialog.axaml  ModelPickerDialog.axaml.cs  SessionView.axaml  SessionView.axaml.cs
Ur.IntegrationTests/: ProviderCompatTests.cs
Ur.Kitty/: Program.cs
Ur.Terminal.Tests/: BufferTests.cs  CellTests.cs  CenterTests.cs  ColorTests.cs  CompositorTests.cs  KeyParserTests.cs  KeyReaderTests.cs  LayerTests.cs  RectTests.cs  RenderLoopTests.cs  ScreenTests.cs  ScrollableListTests.cs  SizeConstraintTests.cs  ThicknessTests.cs  Ur.Terminal.Tests.csproj  VerticalStackTests.cs  WidgetTests.cs
Ur.Terminal/App/: RenderLoop.cs
Ur.Terminal/Components/: IComponent.cs  ScrollableList.cs  Widget.cs
Ur.Terminal/Core/: Buffer.cs  Cell.cs  Color.cs  Rect.cs  Thickness.cs
Ur.Terminal/Input/: Key.cs  KeyEvent.cs  (+4 more)
Ur.Tests/: BuiltinToolTests.cs  ExtensionSystemTests.cs  HostSessionApiTests.cs  LinuxKeyringTests.cs  MacOSKeyringTests.cs  PermissionTests.cs  Ur.Tests.csproj
Ur.Tui/: ChatApp.cs  ChatBackend.cs  IChatBackend.cs  Program.cs  Ur.Tui.csproj  UrChatBackend.cs
Ur.Tui.Tests/: ApiKeyModalTests.cs  ChatAppTests.cs  ChatInputTests.cs  ExtensionManagerModalTests.cs  MessageListTests.cs  ModelPickerModalTests.cs  TestChatBackend.cs  Ur.Tui.Tests.csproj  WordWrapTests.cs
Ur.Widgets/: Application.cs  BoxModel.cs  Button.cs  Calculations.cs  Dialog.cs  DialogResult.cs  Flex.cs  GrowShrink.cs  Label.cs  LayoutDirection.cs  LayoutEngine.cs  ListView.cs  Renderer.cs  ScrollView.cs  Sizing.cs  Stack.cs  Table.cs  TableColumn.cs  TextInput.cs  Traversal.cs  Ur.Widgets.csproj  Widget.cs
boo/: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
boo/boo/: __init__.py  _errors.py  _native.py  _session.py  cli.py  client.py  daemon.py
boo/examples/: shell.py
boo/src/: boo_tester.c  boo_tester.h  main.c
boo/tests/: native_smoke.c  test_cli.py  test_ox_boo_smoke.py  test_session.py
docs/: adding-llm-providers.md  agent-loop.md  boo.md  cli-tui.md  cli.md  compaction-tentative-plan-needs-deep-review.md  config.md  configuration.md  extension-management-implementation-plan.md  extension-management.md  extension-system.md  functional-requirements.md  gui.md  host-di-issues.md  host-session-api.md  index.md  ox.md  permission-system.md  provider-registry.md  providers.md  session-storage.md  settings.md  terminal-framework.md  terminal-layout.md  tool-registry.md  tui-runtime.md  ui-contract.md  workspace.md
evals/: Containerfile
scripts/: boo.sh  format-inspection-results.sh  format-roslyn-results.sh  install.sh
(+777 files in other folders)
